// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeInner is high contrast mode enabled: false 1`] = `
<SideEffect(BodyClassName)
  className="theme-switcher"
/>
`;

exports[`ThemeInner is high contrast mode enabled: true 1`] = `
<SideEffect(BodyClassName)
  className="theme-switcher high-contrast-theme"
/>
`;
